--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
     <title>宝宝</title>
     <meta charset="utf-8">
     <link href="./libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <script src="libs/angular/angular.min.js"></script>
+    <script src="libs/ui-route/release/angular-ui-router.min.js"></script>
+    <script src="libs/jquery/dist/jquery.min.js"></script>
+    <script src="libs/highlight.js"></script>
+    <script src="app.js"></script>
   </head>
   <body ng-app="baobao">
 
@@ -20,8 +26,5 @@
     
     
 
-    <script src="libs/angular/angular.min.js"></script>
-    <script src="libs/ui-route/release/angular-ui-router.min.js"></script>
-    <script src="app.js"></script>
   </body>
 </html>
