--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>宝宝</title>
     <meta charset="utf-8">
+    <link href="css/flat-ui.min.css" rel="stylesheet">
     <link href="./libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <script src="libs/angular/angular.min.js"></script>
