--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>宝宝</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <link href="./libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./libs/flat-ui/dist/css/flat-ui.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
